creating a time-series collection with the same name as existing collection/view returns confusing error codes

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.9.0
    • Affects Version/s: None
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • Execution Team 2020-11-30
    • 38
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      For an existing view, we get CommandNotSupportedOnView.
      For an existing collection, we get the code 17399.

      It would be nice to have a less confusing error code in these situations.

            Assignee:
            Benety Goh
            Reporter:
            Benety Goh
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved: