SERVER-52832 fix error codes for catalog conflicts during time-series collection creation